snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.110420-3.module.sha1
5214abba3a8aace1edde9e475b7ce5a58ae238a5